syntax = "proto2";
package org.minbase.common.rpc.proto.generated;

message CreateTableRequest {
  required string tableName = 1;
  repeated string columns = 2;
}

message CreateTableResponse {
  required bool success = 1;
}

message DropTableRequest {
  required string tableName = 1;
}

message DropTableResponse {
  required bool success = 1;
}

message TruncateTableRequest {
  required string tableName = 1;
}

message TruncateTableResponse {
  required bool success = 1;
}

message AddColumnRequest {
  required string tableName = 1;
  repeated string columns = 2;
}

message AddColumnResponse {
  required bool success = 1;
}

message GetTableInfoRequest {
  required string tableName = 1;
}

message GetTableInfoResponse {
  required string tableName = 1;
  repeated string columns = 2;
}

service AdminService {
  rpc createTable(CreateTableRequest) returns (CreateTableResponse);
  rpc dropTable(DropTableRequest) returns (DropTableResponse);
  rpc truncateTable(TruncateTableRequest) returns (TruncateTableResponse);
  rpc addColumn(AddColumnRequest) returns (AddColumnResponse);
  rpc getTableInfo(GetTableInfoRequest) returns (GetTableInfoResponse);
}