syntax = "proto2";
package org.minbase.common.rpc.proto.generated;

message RpcRequest {
  required int64 length = 1;
  required int64 id = 2;
  required int32 callType = 3;
  required string data = 4;
}

message RpcResponse {
  required int64 length = 1;
  required int64 id = 2;
  required int32 code = 3;
  required string value = 4;
}